# gmail-automation-suite

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INCREMENTAL_USAGE.md  LICENSE  MANIFEST.in  README.md  STATUS.md  email_clustering_reviewer.py  email_ml_categorizer.py  gmail_automation.py  gmail_automation_extended.py  label_updates.txt  processing_state.json  pyproject.toml  requirements.txt  reset_and_start_fresh.py  setup.py  test_reset_tool.py  update_filters.py  update_labels.py
backup/: create_gmail_filters.py  create_gmail_labels.py  gmail_automation.py  gmail_consolidation_final.py  gmail_master_organiser.py  gmail_organizer.py  gmail_promo_manager.py  scan_gmail_sort.py
backup/utilities/: CLEANUP_SUMMARY.md  COMPLETE_WORKFLOW_GUIDE.md  classification_preview.py  customize_training.py  fix_label_mismatch.py
backup_old_scripts/: gmail_automation.py  gmail_automation_concurrent.py  gmail_automation_extended.py
data/: custom_email_rules.json  email_categories.json  rf_feature_names.json
docs/: CONSOLIDATED_SYSTEM_ENHANCEMENT.md  INCREMENTAL_USAGE.md  ML_ENSEMBLE_GUIDE.md  SYSTEM_ARCHITECTURE.md  USAGE_EXAMPLES.md  USAGE_GUIDE.md
examples/: advanced_usage.py  basic_usage.py
models/: metadata.json
src/: __init__.py  consolidated_bootstrap_data.py  email_clustering_reviewer.py  email_ml_categorizer.py  gmail_automation.py
src/gmail_automation/: __init__.py  cli.py
src/gmail_automation/core/: classifier.py  config.py  email_cache.py  gmail_client.py  ml_classifier.py
src/gmail_automation/models/: email.py
src/gmail_automation/utils/: __init__.py  logger.py  migration.py
