[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gmail-automation-suite"
version = "3.0.0"
description = "Advanced Gmail automation with AI-powered email categorization"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Gmail Automation Suite Team", email = "team@gmail-automation-suite.com"}
]
maintainers = [
    {name = "Gmail Automation Suite Team", email = "team@gmail-automation-suite.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "gmail",
    "automation",
    "email",
    "categorization",
    "ai",
    "machine learning",
    "productivity",
    "organization",
    "labels",
    "filters",
]
requires-python = ">=3.8"
dependencies = [
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.8.0",
    "google-api-python-client>=2.0.0",
    "transformers>=4.20.0",
    "torch>=1.9.0",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.1.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
]

[project.optional-dependencies]
ml = [
    "bertopic>=0.14.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.0",
]
dev = [
    "pytest>=6.0",
    "black>=21.0",
    "isort>=5.0",
    "flake8>=3.8",
    "mypy>=0.812",
]

[project.urls]
Homepage = "https://github.com/yourusername/gmail-automation-suite"
Documentation = "https://github.com/yourusername/gmail-automation-suite/blob/main/docs"
Repository = "https://github.com/yourusername/gmail-automation-suite.git"
"Bug Tracker" = "https://github.com/yourusername/gmail-automation-suite/issues"

[project.scripts]
gmail-automation = "gmail_automation:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.md", "*.txt"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true